--- a/site/index-1 copy.html
+++ b/site/index-1 copy.html
@@ -57,61 +57,15 @@
 		</header>
 <!--==============================Content=================================-->
 		<div class="content"><div class="ic">More Website Templates @ TemplateMonster.com - February 24, 2014!</div>
-			
 			<div class="container_12">
-
 				<div class="grid_4">
-					<div class="content-box big ch-item bottom-pad-small">
-						<p style="text-align:center">
-							<img src="images/icon.jpg" class="img_icon"/>
-						</p>
-						<h3 class="h3center">gen
-							<div class="star-bar star-bar-show size-M f-l va-m mr-10">
-								<span class="star" style="width:82%"></span>
-							</div>
-
-						</h3>
-						<p style="text-align: center">前摩托罗拉,中兴 高级前端工程师</p>
-						<hr>
-
-						<p></p>
-						<h4>1000元/天</h4>
-						<p></p>
-						<p>可工作地点：远程</p>
-						<p>可工作时间: 工作日08:00-20:00</p>
-						<button class="button"> 预 约 </button></p>
-						<button class="button button2">和他聊聊</button>
-					</div>
-                </div>
-
-                <div class="grid_2">
-                	<p></p>
-                </div>
-
-                <div class="grid_6 space">
-                	<marquee behavior="scroll" direction="up" scrollamount="7">
-                	<h3>个人介绍</h3>
-                	<p>自由职业2年。最近5年专注移动应用开发，每年完成的小十个项目，从中学到不少也踩过不少坑。这些项目涵盖了从Android 到 iOS 从 原生到混合等各不同技术栈；涉及不同行业，有社交的，有物联网的，有在线工具的，也有视频直播相关的；具有APP全视野考虑能力，例如后端如何管理以及如何为APP提供数据？基本安全考虑等。</p><p>得益于这么多的项目经验，从需求定位，交互设计到开发，交付都具有丰富的项目经验。欢迎预约了解。全职之前一直从事mobile研发，供职单位包括ZTE，Moto，熟悉Android，iOS两大主流平台开发技术和框架，包括原生和混合。</p>
-
-                	<h3>工作经历</h3>
-
-                	<p>&#11044 2013-05-10 - 2015-02-26南京晨捷软件项目经理</p>
-                	<p>从事《综合执法记录仪》以及配套平台的建设。移动端采用Android系统，后端采用nodejs和Darwin Stream Server，实现移动端视频，位置等信息的双向交换。满足执法队伍的现场指挥布控需求。</p>
-
-                	<p>&#11044 2011-05-13 - 2013-05-08摩托罗拉南京研发中心高级移动端工程师</p>
-                	<p>主要负责企业应用和方案的研发，比如Android Security Framework以及相关应用。</p>
-
-                	<p>&#11044 2006-11-10 - 2011-05-10中兴通讯高级开发工程师</p>
-                	<p>主要从事ZTE系列手机研发，从Linux平台到Android。主要负责手机多媒体部分功能模块的开发，维护。包括图库，MediaStore，stagefright等部分。</p>
-
-
-                	</marquee>
-
-                </div>
-
-
-
-                <!--
+					<h2>Who We Are</h2>
+					<img src="images/page2_img.jpg" alt="" class="img_inner">
+					<div class="text1 col2"><a href="#">Hom dui erosi laoru adipiscingq id risus sagittis, non consequat feiter milyno</a></div>
+					<p>In mollis erat mattisy neque facilisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra auctor, leo magna sodales felis, quis malesuada nibh odio ut velit. Proin pharetra luctus.</p>
+					Maecenas vehiculaegestas venenatis. Duiser massa elit, auctor pellentesque vel, aliquet amet erat. <br>
+					<a href="#" class="btn">more</a>
+				</div>
 				<div class="grid_4">
 					<h2>Our History</h2>
 					<ul class="list1">
@@ -137,8 +91,6 @@
 						</li>
 					</ul>
 				</div>
-
-
 				<div class="grid_4">
 					<h2>Opportunities</h2>
 					<div class="text1 col2"><a href="#">Hom dui erosi laoru adipiscingq id risus sagittis, non consequat feiter milyno</a></div>
@@ -153,15 +105,8 @@
 					</ul>
 					Demollis erat mattisy nequelisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra auctor, leo magna sodales felis quis malesuada nibh odio ut velit. Proin pharetra luctusy.
 				</div>
-			
 			</div>
-		-->
 		</div>
-
-
-
-
-
 		<div class="gray_block center">
 			<div class="container_12">
 				<div class="grid_12">
