--- a/site/index.html
+++ b/site/index.html
@@ -255,7 +255,7 @@
             <!-- Main Content end--> 
 
 <!--==============================Content=================================-->
-		<div class="main-content negcontain">
+		<div class="main-content">
             <div class="container">
             	<div class="container_12">
 					<div class="grid_12">
@@ -422,6 +422,11 @@
 		</div>
 -->
 <!--==============================footer=================================-->
+
+		
+
+
+
 		<footer>
 			<div class="container_12">
 				<div class="grid_12">
@@ -432,7 +437,7 @@
 					</div>
 					<div class="clear"></div>
 					<div class="copy">
-						Copyright &copy; 2014.Company name All rights reserved.<a target="_blank" href="http://guantaow.taobao.com/">厚朴网络淘宝店</a><a target="_blank" href="http://www.moobnn.com">网页模板</a>
+						Copyright &copy; 2014.Company name All rights reserved.<a target="_blank" href="index.html">our group</a>
 					</div>
 				</div>
 			</div>
