--- a/site/index-3.html
+++ b/site/index-3.html
@@ -59,76 +59,109 @@
 			</div>
 		</header>
 <!--==============================Content=================================-->
-		<div class="content cont2"><div class="ic">More Website Templates @ TemplateMonster.com - February 24, 2014!</div>
-			<div class="container_12">
-				<div class="grid_12">
-					<h2 class="mb0">Our Projects</h2>
+<div class="content"><div class="ic"></div>
+
+<div class="container_12">
+		<h4 class="title"> 成功作品 </h4>
+	<div class="grid_8 space">
+
+			
+		<div class="pic_list">
+		
+			<img src="https://programmerinnfile.b0.upaiyun.com/community/10001/20170527/VwxO9SE5nv.jpg" />
+		</br>
+			<p>项目介绍</p>
+			<p>项目金额</p>
+			<p>小程序展示</p>
+			<img src="https://programmerinnfile.b0.upaiyun.com/community/10000/20170206/8KQctzzBo3.png" />
+	
+			<img src="https://programmerinnfile.b0.upaiyun.com/community/10000/20170206/sBXAVPTxyG.png" />
+			<img src="https://programmerinnfile.b0.upaiyun.com/community/10000/20170206/5JafMCDOiX.png" />
+
+		</div>
+
+		<p class="text_dev">参与的开发者</p>
+		<p><strong style="color:black; margin-left:-20px;">前端工程师</strong>： <a href="">gen</a></p>
+		<blockquote style="background-color:dimgray; margin-left:-20px;">
+				<p>不展示</p>
+		</blockquote>
+		<p class="text_dev">在鱼客,如和发布作品项目？</p>
+	</br></br>
+	</div>
+
+
+	<div class="grid_1">
+				<p></p>
+		</div>
+
+	<div class="grid_3">
+		<div class="content-box big ch-item bottom-pad-small">
+			<p style="text-align:center">
+				<img src="images/icon.jpg" class="img_icon"/>
+			</p>
+			<h3 class="h3center">gen
+				<div class="star-bar star-bar-show size-M f-l va-m mr-10">
+					<span class="star" style="width:70%"></span>
+				</div>
+
+			</h3>
+			<p style="text-align: center">前摩托罗拉,中兴 高级前端工程师</p>
+			<hr>
+
+			<p></p>
+			<h4>1000元/天</h4>
+			<p></p>
+			<p>可工作地点：远程</p>
+			<p>可工作时间: 工作日08:00-20:00</p>
+			<button class="button"> 预 约 </button></p>
+			<button class="button button2">和他聊聊</button>
+		</div>
+	</div>
+	
+
+
+
+</div>
+
+
+
+
+<!-- ===========================## Best Professionals ===================== -->
+		<div class="gray_block center">
+				<div class="container_12">
+					<div class="grid_12">
+						<h3>Best Professionals</h3>
+					</div>
+					<div class="grid_3">
+						<div class="block3">
+							<img src="images/page2_img1.jpg" alt="">
+							<div class="text2"><a href="#">Mark Johnson</a></div>
+							In mollis erat matt nequemer facilameteserylerarutrum.
+						</div>
+					</div>
+					<div class="grid_3">
+						<div class="block3 bd1">
+							<img src="images/page2_img2.jpg" alt="">
+							<div class="text2"><a href="#">Ingrid Wood</a></div>
+							In mollis erat matt nequemer facilameteserylerarutrum.
+						</div>
+					</div>
+					<div class="grid_3">
+						<div class="block3 bd2">
+							<img src="images/page2_img3.jpg" alt="">
+							<div class="text2"><a href="#">Linda Smith</a></div>
+							In mollis erat matt nequemer facilameteserylerarutrum.
+						</div>
+					</div>
+					<div class="grid_3">
+						<div class="block3 bd3">
+							<img src="images/page2_img4.jpg" alt="">
+							<div class="text2"><a href="#">Devid Grosh</a></div>
+							In mollis erat matt nequemer facilameteserylerarutrum.
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="gray_block gb1">
-			<div class="container_12">
-				<div class="gallery">
-					<div class="grid_3">
-						<a href="images/big1.jpg" class="gal"><img src="images/page4_img1.jpg" alt=""></a>
-						<div class="text1"><a href="#">Hom dui erosi laoru adip</a></div>
-						In mollis erat mattisy nequelisis sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="grid_3">
-						<a href="images/big2.jpg" class="gal bd1"><img src="images/page4_img2.jpg" alt=""></a>
-						<div class="text1"><a href="#">Vivamus at magna non</a></div>
-						Fermollis erat mattisy nequelisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="grid_3">
-						<a href="images/big3.jpg" class="gal bd2"><img src="images/page4_img3.jpg" alt=""></a>
-						<div class="text1"><a href="#">Curabitur vel lorem sit</a></div>
-						In mollis erat mattisy nequelisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="grid_3">
-						<a href="images/big4.jpg" class="gal bd3"><img src="images/page4_img4.jpg" alt=""></a>
-						<div class="text1"><a href="#">Phasellus erat nisuctor</a></div>
-						Hhol mollis erat mattisy kilomi nequelisis, sit amet ultricieser erarutrum. Cras facilisisolo
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="clear"></div>
-					<div class="grid_3">
-						<a href="images/big5.jpg" class="gal"><img src="images/page4_img5.jpg" alt=""></a>
-						<div class="text1"><a href="#">Etiam dui eros, laoreet</a></div>
-						Mollis erat mattisy nequelisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra aucto
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="grid_3">
-						<a href="images/big6.jpg" class="gal bd1"><img src="images/page4_img6.jpg" alt=""></a>
-						<div class="text1"><a href="#">Dui eroslaoreetdui ero</a></div>
-						In mollis erat mattisy nequelisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="grid_3">
-						<a href="images/big7.jpg" class="gal bd2"><img src="images/page4_img7.jpg" alt=""></a>
-						<div class="text1"><a href="#">A at magna noru adip</a></div>
-						Hlottisy nequelisis, sit ametyter ultricieser erarutrum. Crasyto facilisis, nulla vel viverra auc
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-					<div class="grid_3">
-						<a href="images/big8.jpg" class="gal bd3"><img src="images/page4_img8.jpg" alt=""></a>
-						<div class="text1"><a href="#">Retui erosi laoru adip</a></div>
-						Koliu erat mattisy nequelisis, sit amet ultricieser erarutrum. Cras facilisis, nulla vel viverra auctom
-						<br>
-						<a href="#" class="btn">more</a>
-					</div>
-				</div>
-			</div>
-		</div>
 <!--==============================footer=================================-->
 		<footer>
 			<div class="container_12">
