--- a/site/index-2.html
+++ b/site/index-2.html
@@ -44,12 +44,12 @@
 						<nav id="bt-menu" class="bt-menu">
 							<a href="#" class="bt-menu-trigger"><span>Menu</span></a>
 							<ul>
-								<li class="bt-icon"><a href="index.html">Home</a></li>
-								<li class="bt-icon"><a href="index-1.html">About</a></li>
-								<li class="current bt-icon"><a href="index-2.html">Services</a></li>
-								<li class="bt-icon"><a href="index-3.html">Projects</a></li>
-								<li class="bt-icon"><a href="index-4.html">Blog</a></li>
-								<li class="bt-icon"><a href="index-5.html">Contacts</a></li>
+								<li class="bt-icon"><a href="index.html">主页</a></li>
+								<li class="bt-icon"><a href="index-1 copy.html">关于我们</a></li>
+								<li class="current bt-icon"><a href="index-2.html">服务</a></li>
+								<li class="bt-icon"><a href="index-3.html">项目</a></li>
+								<li class="bt-icon"><a href="index-4.html">博客</a></li>
+								<li class="bt-icon"><a href="index-5.html">联系我们</a></li>
 							</ul>
 						</nav>
 						<div class="clear"></div>
